Decoupled JDT logic from LspServer